# Whisper3-multiLanguge

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/whisper_transcribe/: __init__.py  gui.py  transcribe.py
